--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     Seorang Pelajar <cite title="Source Title">Siswi</cite>
   </figcaption>
 </figure>
-  <button type="button" class="btn btn-outline-primary" href="#Pendidikan & Prestasi">Pendidikan & Prestasi</button>
+  <a button type="button" class="btn btn-outline-primary" href="#Pendidikan & Prestasi">Pendidikan & Prestasi</button>
    <button type="button" class="btn btn-outline-primary">Hubungi</button>   
 </div>
     <!--AKHIR HOME-->
@@ -67,7 +67,7 @@
       
     <!--ketiga-->
      
-    <h1 class="text-center" style="margin-top: 20px;"  > Pendidikan & Prestasi </h1>
+    <h1 id="Pendidikan & Prestasi" class="text-center" style="margin-top: 20px;"  > Pendidikan & Prestasi </h1>
 
     </div>
 </div>
@@ -168,4 +168,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
   </body>
+
 </html>
