--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </figcaption>
 </figure>
   <a button type="button" class="btn btn-outline-primary" href="#Pendidikan & Prestasi">Pendidikan & Prestasi</button>
-   <button type="button" class="btn btn-outline-primary">Hubungi</button>   
+   <a button type="button" class="btn btn-outline-primary" href="Hubungi">Hubungi</button>   
 </div>
     <!--AKHIR HOME-->
 
@@ -46,8 +46,8 @@
         <div class="col">
              <p class="text-center">Hai salam kenal, saya Sitarani Rara Safitri siswi kelas XII-3 DI SMA NEGRI 10 Garut.
                 Saya siswa
-                yang aktif dalam bidang akademik & non-akademik. Selain itu saya siswa yang kreatif dalam seni. Saya mempunyai 
-                 cita - cita ingin menjadi guru matematika, Selain itu saya ingin menggelilingi dunia terutama jepang. </p>
+               yang aktif dalam bidang akademik & non-akademik. Selain itu saya siswa yang kreatif dalam seni. Saya mempunyai 
+               cita - cita ingin menjadi guru matematika, Selain itu saya ingin menggelilingi dunia terutama jepang. </p>
       </div> 
       <div class="col">
         <p>Di sekolah, saya aktif mengikutin organisasi intra sekolah atau OSIS sebagai anggota. Walaupun, saya aktif dalam non-akademik 
@@ -136,18 +136,18 @@
   <div class="col-12 mb-5" >
     <button type="submit" class="btn btn-primary">Kirim</button>
   </div>
-   <h3>info kontak</h3>
+   <h3 id="Hubungi">info kontak</h3>
   <div class="col-5">
-   <div class="p-3 mb-2 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
-   <div class="p-3 mb-2 bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
-   <div class="p-3 mb-2 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
+   <div class="p-3 mb-5 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
+   <div class="p-3 mb-5 bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
+   <div class="p-3 mb-5 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
   </di>
 </form>
       </div>
     <!--akhir keempat-->
 
     <!-- terakhir-->
-        <div style=" background-color: #000000 ; " class="text-center" >
+        <div style=" background-color: #000000 ;  >
           <a href="https://instagram.com/sitarani.rs?igsh=eGExN3BteDcTFk" class="link-light">intragram.sitaranirarasafitri</a>
         </div>
      <!--terakhir-->
@@ -170,3 +170,4 @@
   </body>
 
 </html>
+
