--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   </figcaption>
 </figure>
   <a button type="button" class="btn btn-outline-primary" href="#Pendidikan & Prestasi">Pendidikan & Prestasi</button>
-   <a button type="button" class="btn btn-outline-primary" href="Hubungi">Hubungi</button>   
+   <a button type="button" class="btn btn-outline-primary" href="#Hubungi">Hubungi</button>   
 </div>
     <!--AKHIR HOME-->
 
     <!--kedua-->
     <div>
-      <div style=" background-color: #f0cfcb57; margin-top: 150px ; ">
+      <div style=" background-color: #f0cfcb57; margin-top: 250px ; ">
         <h3 class="text-center">TENTANG SAYA</h3>
        <div class="row" style="margin-top: 40px;"> 
         <div class="col">
@@ -119,7 +119,7 @@
           
       </div>
     <!--keempat-->
-      <div style=" background-color: #f0cfcb57; margin-top: 150px ; ">
+      <div style=" background-color: #f0cfcb57; margin-top: 200px ; ">
         <form class="row g-3">
   <div class="col-12">
     <label for="inputAddress" class="form-label"> Nama Depan</label>
@@ -138,8 +138,8 @@
   </div>
    <h3 id="Hubungi">info kontak</h3>
   <div class="col-5">
-   <div class="p-3 mb-5 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
-   <div class="p-3 mb-5 bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
+   <div class=" bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
+   <div class="bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
    <div class="p-3 mb-5 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
   </di>
 </form>
@@ -147,7 +147,7 @@
     <!--akhir keempat-->
 
     <!-- terakhir-->
-        <div style=" background-color: #000000 ;  >
+        <div style=" background-color: #000000;margin-top: 200px" >
           <a href="https://instagram.com/sitarani.rs?igsh=eGExN3BteDcTFk" class="link-light">intragram.sitaranirarasafitri</a>
         </div>
      <!--terakhir-->
@@ -170,4 +170,5 @@
   </body>
 
 </html>
+
 
