--- a/index.html
+++ b/index.html
@@ -136,18 +136,20 @@
   <div class="col-12 mb-5" >
     <button type="submit" class="btn btn-primary">Kirim</button>
   </div>
-   <h3 id="Hubungi">info kontak</h3>
+   <h3 id="Hubungi">Hubungi</h3>
+  <div class="row">
   <div class="col-5">
    <div class=" bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
    <div class="bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
    <div class="p-3 mb-5 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
-  </di>
+  </div>
+  </div>
 </form>
-      </div>
+   </div>
     <!--akhir keempat-->
 
     <!-- terakhir-->
-        <div style=" background-color: #000000;margin-top: 200px" >
+        <div style=" background-color: #000000;margin-top: 0 auto" >
           <a href="https://instagram.com/sitarani.rs?igsh=eGExN3BteDcTFk" class="link-light">intragram.sitaranirarasafitri</a>
         </div>
      <!--terakhir-->
@@ -170,5 +172,6 @@
   </body>
 
 </html>
+
 
 
