--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
       <div style=" background-color: #f0cfcb57; margin-top: 250px ; ">
         <h3 class="text-center">TENTANG SAYA</h3>
        <div class="row" style="margin-top: 40px;"> 
-        <div class="col">
+        <div class="col-md-4">
              <p class="text-center">Hai salam kenal, saya Sitarani Rara Safitri siswi kelas XII-3 DI SMA NEGRI 10 Garut.
                 Saya siswa
                yang aktif dalam bidang akademik & non-akademik. Selain itu saya siswa yang kreatif dalam seni. Saya mempunyai 
                cita - cita ingin menjadi guru matematika, Selain itu saya ingin menggelilingi dunia terutama jepang. </p>
       </div> 
-      <div class="col">
+      <div class="col-md-4">
         <p>Di sekolah, saya aktif mengikutin organisasi intra sekolah atau OSIS sebagai anggota. Walaupun, saya aktif dalam non-akademik 
           saya lebih memprioritaskan akademik di banding non-akademik, Karna bagi saya akademik itu penting dari semuanya jika di lihat dari zaman sekarang,
           saya tau bahwa di zaman sekarang skill pun ikut penting dalam kehidupan, saya akan berusaha buat memanfaatkan waktu luang saya untuk menggembang skil tersebut.
         </p>
       </div>
-      <div class="col">
+      <div class="col-md-4">
         <p> Saya mempunyai hobi yang cukup banyak salah satunya berolaraga dan menggambar,dan belajar. Saya dan teman sering membahas soal-soal matematika 
            dan belajar bareng lewat daring,maka dari itu sayajuga ingin kalian gabung bersama kami lewat group belajar kami
         </p>
@@ -74,7 +74,7 @@
     <!-- akhir ketiga-->
  
     <div  class="row container" style="margin: auto;">
-        <div class="col text-center">
+        <div class="col-md-4 text-center">
           <img src="sd2.png" alt="" width="300px">
           <h5 >Sekolah Dasar (2014-2019)</h5>
           <p> Setealah lulus tk saya lanjut sekola di SDN 04 LEUWIGOONG</p>
@@ -82,7 +82,7 @@
         <p>-kelas 4 saya mendapatkan peringkata 3</p>
         <p>kelas 5-6 saya mendapatkan peringkan 2</p>
         </div>
-        <div class="col text-center">
+        <div class="col-md-4 text-center">
           <img src="smp2.png" alt="" width="150px">
           <h5>SMPAN 01 LEUWIGOONG</h5>
           <P>(2019-2023)</P>
@@ -91,7 +91,7 @@
           <p>- mengikuti organisasi PMR</p>
           <p>- mengikuti organisasi Futsal</p>
         </div>
-        <div class="col text-center">
+        <div class="col-md-4 text-center">
           <img src="logo2.png" alt width="200px">
           <h5>SMAN 10 GARUT</h5>
            <p>(2023-2026)</p>
@@ -102,13 +102,13 @@
      </div>
      <h1 class="text-center">Universitas Impian</h1>
      <div class="row container" style="margin: auto;">
-      <div class="col text-center">
+      <div class="col-md-4 text-center">
          <img src="upi2.png" class="rounded mx-auto d-block" alt="..."> 
          <h5>Universitas Pendidikan Indonesia</h5>
          <p>- plan 1 Jurusan Pendidikan Matematika</p>
          <p>- plan 2 Jurusan Akuntasi</p>
          </div>
-         <div class="col text-center">
+         <div class="col-md-4 text-center">
           <img src="ipi2.png" class="rounded mx-auto d-block" alt="...">
           <h5>Institut Pendidikan Indonesia </h5>
           <p>- plan 1 Jurusan Pendidikan Matematika</p>
@@ -138,10 +138,10 @@
   </div>
    <h3 id="Hubungi">Hubungi</h3>
   <div class="row">
-  <div class="col-5">
-   <div class=" bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
-   <div class="bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
-   <div class="p-3 mb-5 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
+  <div class="col-md-4">
+   <div class="="p-3 md-4 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
+   <div class="="p-3 mb-4 bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
+   <div class="="p-3 mb-4 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
   </div>
   </div>
 </form>
@@ -149,7 +149,7 @@
     <!--akhir keempat-->
 
     <!-- terakhir-->
-        <div style=" background-color: #000000;margin-top: 0 auto" >
+        <div style=" background-color: #000000;margin-top: 0 auto" class="text-center >
           <a href="https://instagram.com/sitarani.rs?igsh=eGExN3BteDcTFk" class="link-light">intragram.sitaranirarasafitri</a>
         </div>
      <!--terakhir-->
@@ -172,6 +172,7 @@
   </body>
 
 </html>
+
 
 
 
