--- a/index.html
+++ b/index.html
@@ -139,17 +139,20 @@
    <h3 id="Hubungi">Hubungi</h3>
   <div class="row">
   <div class="col-md-4">
+     <a href="https://wa.me/qr/53FBMZ37C5TVA1" class="link-light">WhatsApp Sitarani</a>
+        </div>
    <div class="="p-3 md-4 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
-   <div class="="p-3 mb-4 bg-secondary text-white col-7">0857-0317-2379(WhatsApp)</div>
-   <div class="="p-3 mb-4 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
+   <div class="="p-3 mb-4 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail
   </div>
+     <a href="Sitaranirarasafitri4@gmail.com" class="link-light">email ranirarasafitri</a>
+        </div>
   </div>
 </form>
    </div>
     <!--akhir keempat-->
 
     <!-- terakhir-->
-        <div style=" background-color: #000000;margin-top: 0 auto" class="text-center >
+        <div style=" background-color: #000000;margin-top: 0 auto" class="text-center" >
           <a href="https://instagram.com/sitarani.rs?igsh=eGExN3BteDcTFk" class="link-light">intragram.sitaranirarasafitri</a>
         </div>
      <!--terakhir-->
@@ -172,6 +175,7 @@
   </body>
 
 </html>
+
 
 
 
