--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!--kedua-->
     <div>
-      <div style=" background-color: #f0cfcb57; margin-top: 250px ; ">
+      <div style=" background-color: #f0cfcb57; margin-top: 400px ; ">
         <h3 class="text-center">TENTANG SAYA</h3>
        <div class="row" style="margin-top: 40px;"> 
         <div class="col-md-4">
@@ -119,7 +119,7 @@
           
       </div>
     <!--keempat-->
-      <div style=" background-color: #f0cfcb57; margin-top: 200px ; ">
+      <div style=" background-color: #f0cfcb57; margin-top: 0 auto ; ">
         <form class="row g-3">
   <div class="col-12">
     <label for="inputAddress" class="form-label"> Nama Depan</label>
@@ -142,10 +142,8 @@
      <a href="https://wa.me/qr/53FBMZ37C5TVA1" class="link-light">WhatsApp Sitarani</a>
         </div>
    <div class="="p-3 md-4 bg-secondary text-white col-7 ">0858-2407-6732 (tlpn)</div>
-   <div class="="p-3 mb-4 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail
-  </div>
-     <a href="Sitaranirarasafitri4@gmail.com" class="link-light">email ranirarasafitri</a>
-        </div>
+   <div class="="p-3 mb-4 bg-secondary text-white col-7">sitaranirs4@gmail.com (Gmail)
+   </div>
   </div>
 </form>
    </div>
@@ -175,6 +173,7 @@
   </body>
 
 </html>
+
 
 
 
