--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--akhir navbar-->
 
     <!--HOME-->
-      <div class="text-center" style="margin-top: 50px;">
+      <div  class="text-center" style="margin-top: 50px;">
         <img src="potop.png" class="rounded-circle border border-2" alt="...">
         <figure class="text-center">
   <blockquote class="blockquote">
@@ -40,11 +40,11 @@
 
     <!--kedua-->
     <div>
-      <div style=" background-color: #f0cfcb57; margin-top: 400px ; ">
+      <div style=" background-color: #f0cfcb57; margin-top: 0 auto ; ">
         <h3 class="text-center">TENTANG SAYA</h3>
-       <div class="row" style="margin-top: 40px;"> 
+       <div class="row container" style="margin-top: 40px;"> 
         <div class="col-md-4">
-             <p class="text-center">Hai salam kenal, saya Sitarani Rara Safitri siswi kelas XII-3 DI SMA NEGRI 10 Garut.
+             <p>Hai salam kenal, saya Sitarani Rara Safitri siswi kelas XII-3 DI SMA NEGRI 10 Garut.
                 Saya siswa
                yang aktif dalam bidang akademik & non-akademik. Selain itu saya siswa yang kreatif dalam seni. Saya mempunyai 
                cita - cita ingin menjadi guru matematika, Selain itu saya ingin menggelilingi dunia terutama jepang. </p>
@@ -73,7 +73,7 @@
 </div>
     <!-- akhir ketiga-->
  
-    <div  class="row container" style="margin: auto;">
+    <div  class="row container" style="margin: 0 auto;">
         <div class="col-md-4 text-center">
           <img src="sd2.png" alt="" width="300px">
           <h5 >Sekolah Dasar (2014-2019)</h5>
@@ -173,6 +173,7 @@
   </body>
 
 </html>
+
 
 
 
