--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div>
       <div style=" background-color: #f0cfcb57; margin-top: 0 auto ; ">
         <h3 class="text-center">TENTANG SAYA</h3>
-       <div class="row container" style="margin-top: 40px;"> 
+       <div class="row" style="margin-top: 40px;"> 
         <div class="col-md-4">
              <p>Hai salam kenal, saya Sitarani Rara Safitri siswi kelas XII-3 DI SMA NEGRI 10 Garut.
                 Saya siswa
@@ -73,7 +73,7 @@
 </div>
     <!-- akhir ketiga-->
  
-    <div  class="row container" style="margin: 0 auto;">
+    <div  class="row" style="margin: 0 auto;">
         <div class="col-md-4 text-center">
           <img src="sd2.png" alt="" width="300px">
           <h5 >Sekolah Dasar (2014-2019)</h5>
@@ -101,7 +101,7 @@
         </div>
      </div>
      <h1 class="text-center">Universitas Impian</h1>
-     <div class="row container" style="margin: auto;">
+     <div class="row" style="margin: auto;">
       <div class="col-md-4 text-center">
          <img src="upi2.png" class="rounded mx-auto d-block" alt="..."> 
          <h5>Universitas Pendidikan Indonesia</h5>
@@ -114,9 +114,7 @@
           <p>- plan 1 Jurusan Pendidikan Matematika</p>
          <p>- plan 2 Jurusan Akuntasi</p>
          </div>
-     </div>
-           
-          
+     </div>     
       </div>
     <!--keempat-->
       <div style=" background-color: #f0cfcb57; margin-top: 0 auto ; ">
@@ -173,6 +171,7 @@
   </body>
 
 </html>
+
 
 
 
